# Icebreaker

./: .env.example  .gitignore  README.md  pyproject.toml
config/: permissions.yaml  services.yaml
docs/: CODING_STANDARDS.md  DEVELOPMENT_PLAN.md  REUSE_ANALYSIS.md  tier1-implementation.md
src/icebreaker/: __init__.py  server.py
src/icebreaker/core/: __init__.py  config.py  connection.py  errors.py  logging.py  permissions.py
src/icebreaker/models/: __init__.py
src/icebreaker/services/: __init__.py
src/icebreaker/tools/: __init__.py
src/icebreaker/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_snowflake_connection.py
tests/unit/: test_config.py  test_connection.py  test_errors.py
